--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="item box2">
                     <div class="people">
                         <div class="photo">
-                          <img src="../16-testimonials-grid-section-main/images/image-jonathan.jpg" alt="Jonathan Walters">
+                          <img src="../images/image-jonathan.jpg" alt="Jonathan Walters">
                         </div>
                         <div class="data">
                           <h2>Jonathan Walters</h2>
@@ -62,7 +62,7 @@
                 <div class="item box3">
                     <div class="people">
                         <div class="photo">
-                          <img src="../16-testimonials-grid-section-main/images/image-jeanette.jpg" alt="Jeanette Harmon">
+                          <img src="../images/image-jeanette.jpg" alt="Jeanette Harmon">
                         </div>
                         <div class="data">
                           <h2 class="color2">Jeanette Harmon</h2>
@@ -82,7 +82,7 @@
                 <div class="item merged-row box4">
                     <div class="people">
                         <div class="photo">
-                          <img src="../16-testimonials-grid-section-main/images/image-patrick.jpg" alt="Patrick Abrams">
+                          <img src="../images/image-patrick.jpg" alt="Patrick Abrams">
                         </div>
                         <div class="data">
                           <h2>Patrick Abrams</h2>
@@ -106,7 +106,7 @@
             <div class="item2 box5">
                 <div class="people">
                     <div class="photo">
-                      <img src="../16-testimonials-grid-section-main/images/image-kira.jpg" alt="Kira Whittle">
+                      <img src="../images/image-kira.jpg" alt="Kira Whittle">
                     </div>
                     <div class="data">
                       <h2 class="color2">Kira Whittle</h2>
